--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
-body {
+body, html, #map {
   padding: 0;
   margin: 0;
+  width: 100%;
+  height: 100%;
 }
 
-html, body, #map {
-  height: 100%;
-  width: 100%;
+body {
+  font-family: sans-serif;
 }
